[gd_scene load_steps=2 format=3 uid="uid://c66lwgmk1tlvp"]

[ext_resource type="Script" uid="uid://b3g1uqcvlld52" path="res://scripts/kill_zone.gd" id="1_kebdr"]

[node name="killZone" type="Area2D"]
script = ExtResource("1_kebdr")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
